--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Fede Ruiz</title>
   </head>
-  <body>
-
+  <body>	
+	<h1>Hello, Code School!</h1>
+	<ul>
+		<li>
+			Javascript.
+		</li>
+		<li>
+			Node.
+		</li>
+		<li>
+			React.
+		</li>
+	</ul>
   </body>
 </html>
